# netpol-audit

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
netpol_audit/: cli.py
netpol_audit/core/: analyze.py  baseline.py  cluster.py  db.py  enforcement.py  linkerd.py  mesh.py  netpol.py
netpol_audit/reports/: terminal.py
tests/: test_enforcement.py  test_linkerd.py  test_mesh.py  test_netpol_audit.py  test_persistence.py
